--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 h1,
 p {
-  font-family: "Montserrat", sans-serif;
   font-weight: 900;
   font-style: normal;
   font-optical-sizing: auto;
@@ -8,6 +7,48 @@ p {
 }
 
 body {
-  background-color: #f6faf6;
+  
   text-align: center;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: #f6faf6;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  padding: 20px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+section {
+  background-color: #f9f9f9;
+  padding: 50px;
+  text-align: center;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
 }
