--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,7 @@ p {
 }
 
 body {
-  
   text-align: center;
-}
-
-body {
   font-family: "Montserrat", sans-serif;
   background-color: #f6faf6;
   margin: 0;
@@ -26,6 +22,7 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  color: #0d1a10;
 }
 
 nav ul li {
@@ -34,7 +31,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #fff;
+  color: #0d1a10;
   text-decoration: none;
 }
 
