--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ section {
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
+  background-color: #62ac72;
+  color: #0d1a10;
   text-decoration: none;
   border-radius: 5px;
 }
