--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ section {
   padding: 10px 20px;
   background-color: #62ac72;
   color: #0d1a10;
+  font-weight: 400;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 8px;
 }
