--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,6 +1,6 @@
 :root{
     --text: #0d1a10;
-    --background: #f6faf6;
+    --background: #e9f3e9;
     --primary: #62ad72;
     --secondary: #a6c8d0;
     --accent: #849ebf;
