--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -33,14 +33,14 @@
 }
 
 .btn {
-    padding: 0.75em 2em;
-    font-size: 1.2rem;
+    padding: 1em 2em;
     background-color: var(--primary);
     border-radius: 16px;
-    white-space: nowrap;
+    transition: transform ease 0.2s, box-shadow ease 0.2s;
+    display: inline-block;
 }
 
-.btn:hover {
-    transform: scale(1.2, 1.2);
-    box-shadow: 0px 20px 80px -20px var(--primary);
+.btn:hover{
+    transform: scale(1.01);
+    box-shadow: 0 20px 80px -10px var(--primary);
 }
