--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -33,9 +33,9 @@
 }
 
 .btn {
-    padding: 1em 2em;
+    padding: 10px 24px;
     background-color: var(--primary);
-    border-radius: 16px;
+    border-radius: 100px;
     transition: transform ease 0.2s, box-shadow ease 0.2s;
     display: inline-block;
 }
