--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -5,7 +5,7 @@
     align-items: center; 
 }
 .nav__logo {
-    justify-self: start;
+    justify-self: end;
     font-weight: 800;
     font-size: 32px;
     text-transform: capitalize;
