--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -7,7 +7,7 @@
 }
 
 .header__nav {
-    margin-bottom: 80px;
+    margin-bottom: 40px;
 }
 
 .header__content {
@@ -15,16 +15,16 @@
 }
 
 .header_title {
-    margin-bottom: 16px;
-    font-size: 80px;
+    margin-bottom: 20px;
+    font-size: xx-large;
     font-weight: 800;
     line-height: 130%;
     text-transform: capitalize;
 }
 
 .header__content p {
-    font-size: 24px;
-    font-weight: 400;
+    font-size: large;
+    font-weight: 600;
     line-height: 160%;
 }
 
@@ -33,14 +33,70 @@
 }
 
 .btn {
-    padding: 10px 24px;
+    padding: 1rem 2rem;
     background-color: var(--primary);
     border-radius: 100px;
-    transition: transform ease 0.2s, box-shadow ease 0.2s;
-    display: inline-block;
+    
+
+    display: inline;
+    flex-direction: column;
 }
 
-.btn:hover{
-    transform: scale(1.01);
-    box-shadow: 0 20px 80px -10px var(--primary);
+.header__card {
+    margin-top: 100px;
 }
+
+.card {
+    width: 100%;
+    height: 60vmin;
+    max-height: 400px;
+    min-width: 400px;
+    border-radius: 36px;
+    background-color: var(--primary);
+    transition: transform ease-out 0.2s, box-shadow ease-out 0.2s;
+    display: flex;
+    flex-direction: row;
+}
+
+.card__content {
+    border-radius: 36px;
+    width: 100%;
+    height: 100%;
+    padding: 36px;
+    text-align: start;
+    font-weight: 800;
+    font-size: xx-large;
+}
+
+.card:hover{
+    transform: scale(1.01);
+    box-shadow: 0 20px 80px -0px var(--primary);
+}
+
+.header__card{
+    gap: 24px;
+    width: 100%;
+    display: flex;
+}
+
+.footer__header {
+    display: flex;
+    margin-top: auto;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 48px;
+}
+.footer__author{
+    font-weight: 600;
+}
+.footer__link {
+    font-weight: 800;
+}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="header__card"] {
+        display: grid;
+    }
+  }
