--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+$font-main: "Montserrat", sans-serif;
 
 html, body {
-    font-family: var(--font-main);
+    font-family: $font-main;
     color: var(--text);
     background-color: var(--background);
 }
