--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,9 +1,27 @@
-:root{
-    --text: #164120;
-    --background: #e9f3e9;
-    --primary: #62ad72;
-    --secondary: #a6c8d0;
-    --accent: #849ebf;
+$themes: (
+ light: (
+   text: #0c270c,
+   background: #e6f9e6,
+   primary: #4db350,
+   secondary: #4ad34a,
+   accent: #01d001,
+ ),
+ dark: (
+   text: #daf3da,
+   background: #061906,
+   primary: #4db350,
+   secondary: #2cb52c,
+   accent: #2ffe2f,
+ ),
+);
 
-    --font-main: 'Montserrat', sans-serif;
+@each $name, $map in $themes {
+    @media (prefers-color-scheme: #{$name}) {
+        :root {
+            @each $key,
+            $value in $map {
+                --#{$key}: #{$value};
+            }
+        }
+    }
 }
