--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-$font-main: "Montserrat", sans-serif;
 
 html, body {
-    font-family: $font-main;
+    font-family: "Montserrat", sans-serif;
     color: var(--text);
     background-color: var(--background);
 }
