--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -49,6 +49,7 @@
 .card {
     width: 100%;
     height: 60vmin;
+    min-height: 200px
     max-height: 400px;
     border-radius: 36px;
     background-color: var(--primary);
