--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Links */
@@ -63,8 +62,7 @@ input::-ms-clear {
 
 button, input[type=submit] {
   display: inline-block;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   background-color: transparent;
   background: none;
   cursor: pointer;
@@ -118,13 +116,21 @@ html, body {
   margin: 0 auto;
 }
 
+::-moz-selection {
+  background: var(--secondary);
+  color: var(--text);
+}
+
+::selection {
+  background: var(--secondary);
+  color: var(--text);
+}
+
 .nav {
   display: grid;
   grid-template-columns: 2fr 8fr 2fr;
   gap: 20px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .nav__logo {
@@ -136,8 +142,6 @@ html, body {
 
 .nav-list {
   justify-self: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 64px;
   font-weight: 600;
@@ -182,10 +186,7 @@ html, body {
   background-color: var(--primary);
   border-radius: 100px;
   display: inline;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .header__card {
@@ -199,10 +200,7 @@ html, body {
   max-height: 400px;
   border-radius: 36px;
   background-color: var(--primary);
-  -webkit-transition: -webkit-transform ease-out 0.2s, -webkit-box-shadow ease-out 0.2s;
-  transition: -webkit-transform ease-out 0.2s, -webkit-box-shadow ease-out 0.2s;
   transition: transform ease-out 0.2s, box-shadow ease-out 0.2s;
-  transition: transform ease-out 0.2s, box-shadow ease-out 0.2s, -webkit-transform ease-out 0.2s, -webkit-box-shadow ease-out 0.2s;
 }
 
 .card__content {
@@ -216,32 +214,22 @@ html, body {
 }
 
 .card:hover {
-  -webkit-transform: scale(1.01);
-          transform: scale(1.01);
-  -webkit-box-shadow: 0 20px 80px 0px var(--primary);
-          box-shadow: 0 20px 80px 0px var(--primary);
+  transform: scale(1.01);
+  box-shadow: 0 20px 80px 0px var(--primary);
 }
 
 .header__card {
   gap: 24px;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .footer__header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: auto;
   width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   padding: 48px;
 }
 
