--- a/scss/blocks/_nav-list.scss
+++ b/scss/blocks/_nav-list.scss
@@ -7,7 +7,7 @@
     font-weight: 600;
     font-size: 24px;
 }
-.nav-list__item {
-}
-.nav-list__link {
-}
+
+.nav-list__item {}
+
+.nav-list__link {}
