--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -2,11 +2,37 @@
     display: grid;
     grid-template-columns: 2fr 8fr 2fr;
     gap: 20px;
-    align-items: center; 
+    align-items: center;
 }
+
 .nav__logo {
     justify-self: end;
     font-weight: 800;
     font-size: 32px;
     text-transform: capitalize;
+}
+
+.details__head {
+    margin-top: 40px;
+}
+
+details>summary {
+    padding: 16px 16px 16px 32px;
+    width: auto;
+    background-color: var(--primary);
+    list-style: none;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    font-weight: 800;
+    border-radius: 100px;
+    transition: height 1s ease;
+}
+
+details>p {
+    background-color: var(--primary);
+    padding: 36px 32px 32px 32px;
+    margin: -30px 0px 0px 0px;
+    border-radius: 0px 0px 2rem 2rem;
+    font-weight: 600;
 }
