--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -2,6 +2,11 @@
     padding-top: 40px;
 
     a {
+        color: var(--secondary);
+        font-weight: 800;
+    }
+
+    p {
         color: var(--text);
     }
 }
