--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -16,23 +16,53 @@
     margin-top: 40px;
 }
 
-details>summary {
-    padding: 16px 16px 16px 32px;
-    width: auto;
-    background-color: var(--primary);
-    list-style: none;
-    border: none;
-    cursor: pointer;
-    font-size: 24px;
-    font-weight: 800;
-    border-radius: 100px;
-    transition: height 1s ease;
-}
+details[open] summary ~ * {
+    animation: open 0.3s ease-in-out;
+  }
+  
+  @keyframes open {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 
-details>p {
-    background-color: var(--primary);
-    padding: 36px 32px 32px 32px;
-    margin: -30px 0px 0px 0px;
-    border-radius: 0px 0px 2rem 2rem;
-    font-weight: 600;
-}
+  details summary::-webkit-details-marker {
+    display: none;
+  }
+  
+  details summary {
+    width: 100%;
+    padding: 0.5rem 0;
+    position: relative;
+    cursor: pointer;
+    font-size: 1.25rem;
+    font-weight: 300;
+    list-style: none;
+  }
+  
+  details summary:after {
+    content: "+";
+    position: absolute;
+    font-size: 1.75rem;
+    line-height: 0;
+    margin-top: 0.75rem;
+    right: 0;
+    font-weight: 200;
+    transform-origin: center;
+    transition: 200ms linear;
+  }
+  details[open] summary:after {
+    transform: rotate(45deg);
+    font-size: 2rem;
+  }
+  details summary {
+    outline: 0;
+  }
+  details p {
+    font-size: 0.95rem;
+    margin: 0 0 1rem;
+    padding-top: 1rem;
+  }
