--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -71,9 +71,21 @@
     font-size: xx-large;
 }
 
-.card:hover {
-    transform: scale(1.01);
-    box-shadow: 0 20px 80px -0px var(--primary);
+// .card:hover{
+//     transform: scale(1.01);
+//     box-shadow: 0 20px 80px -0px var(--primary);
+// }
+
+// .card:hover, .card:active{
+//     transform: scale(1.01);
+//     box-shadow: 0 20px 80px -0px var(--primary);
+//   }
+
+  @media (any-hover: hover) {
+    .card:hover{
+        transform: scale(1.01);
+        box-shadow: 0 20px 80px -0px var(--primary);
+      }
 }
 
 .header__card {
