--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -7,11 +7,11 @@ $themes: (
     accent: #01d001,
   ),
   dark: (
-    text: #daf3da,
-    background: #061906,
-    primary: #4db350,
-    secondary: #2cb52c,
-    accent: #2ffe2f,
+    text: #cad3f5,
+    background: #24273a,
+    primary: #8aadf4,
+    secondary: #c6a0f6,
+    accent: #a6da95,
   ),
 );
 
