--- a/css/main.css
+++ b/css/main.css
@@ -120,11 +120,11 @@ legend {
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --text: #daf3da;
-    --background: #061906;
-    --primary: #4db350;
-    --secondary: #2cb52c;
-    --accent: #2ffe2f;
+    --text: #cad3f5;
+    --background: #24273a;
+    --primary: #8aadf4;
+    --secondary: #c6a0f6;
+    --accent: #a6da95;
   }
 }
 html,
